# cardano-plutus-starter

./: cabal.project  notes.txt  plutus-starter.cabal  shell.nix
app/: parsing-datum-json.hs  serialize-auction.hs
app/utils/: Trace.hs
app/utils/Token/: OffChain.hs
src/: Locker.hs
src/surehive-task/: ManualEmulatorTests.hs  SurehiveAuction.hs  parsing-redeemer-json.hs
tokensp/: 01.addr  01.skey  01.vkey  02.addr  02.skey  02.vkey  mintingvars.sh
tokensp/policy/: policy.script  policy.skey  policy.vkey  policyID
